# liem-os2

./: .cursorrules  .gitattributes  .gitignore  CLAUDE.md  MANIFEST.in  README.md  bootstrap.bat  bootstrap.ps1  bootstrap.py  build.py  pyproject.toml  requirements.txt
.agents/: AGENTS.md  skills.json
.claude/skills/intent-layer/: SKILL.md
.claude/skills/skillspector/: SKILL.md
.github/workflows/: ci.yml
agents/: axel.md
agents/business/: analyst_agent.md  competitor_agent.md  finance_agent.md  legal_agent.md
agents/core/: context_agent.md  eval_agent.md  executor.md  planner.md  recovery_agent.md  router.md  scheduler.md  validator.md
agents/creative/: growth_agent.md  seo_agent.md  writer_agent.md
agents/data/: bi_agent.md  etl_agent.md  warehouse_agent.md
agents/hr/: onboarding_agent.md  recruiter_agent.md
agents/integration/: connector_agent.md  webhook_agent.md
agents/pm_agile/: release_agent.md  scrum_agent.md
agents/research/: analyst_agent.md  search_agent.md  synthesis_agent.md
agents/security/: sast_agent.md  threat_agent.md
agents/support/: feedback_agent.md  support_agent.md  triage_agent.md  troubleshooter_agent.md
agents/swe/: architect_agent.md  backend_agent.md  dba_agent.md  devops_agent.md  frontend_agent.md  ml_agent.md  pm_agent.md  qa_agent.md  reviewer_agent.md  sre_agent.md
artifacts/: manifest.yaml
bootstrap/: memory_loader.md  registry_loader.md  runtime_loader.md
compatibility/: policy.yaml
docs/adr/: ADR-001-artifact-passing.md  ADR-002-sandbox-isolation.md  ADR-003-runtime-separation.md  ADR-004-cyclic-state-machine.md  ADR-005-ast-diff-patching.md  ADR-006-llm-friendly-search-replace.md  ADR-007-model-offloading-vram.md
events/: task_completed_v1.yaml  task_created_v1.yaml
governance/: limits.yaml  policy.md
kernel/: admission.yaml  event_loop.md  interfaces.yaml
maintenance/gc/: policy.yaml
registry/: agents.yaml  capabilities.yaml  lifecycle.yaml
sandbox/: policy.yaml
schemas/: artifact.schema.json  event.schema.json  task.schema.json  work_unit.schema.json
scripts/: self_heal.py
src/: main.py
src/agents/: base.py
src/kernel/: event_bus.py  event_loop.py  recovery.py  scheduler.py
src/liem_os/: __init__.py  main.py  server.py
src/liem_os/agents/: context.py
src/liem_os/dashboard/: app.js  index.html  style.css
src/storage/: sqlite_db.py
(+7 files in other folders)
