[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liem-os"
version = "0.6.0"
description = "LIEM OS: Enterprise Multi-Agent Orchestrator"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "pydantic>=1.10.0",
    "pywebview>=5.0.0",
    "skillspector @ git+https://github.com/NVIDIA/skillspector.git",
    "specify-cli @ git+https://github.com/github/spec-kit.git"
]

[project.scripts]
liem-os = "liem_os.main:cli_entrypoint"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "liem_os",
    "liem_os.storage",
    "liem_os.kernel",
    "liem_os.agents"
]

[tool.uv]
override-dependencies = [
    "typer>=0.26.8"
]
